Bug 1367460 Shouldn't make focused editing host blurred when moving selection with Selection API r=smaug

Chromium doesn't make focused editing host blurred when a Selection API method call moves selection to a non-editable node.  Let's follow same behavior for compatibility with both Chromium and Gecko 54.

MozReview-Commit-ID: HXmYX18HVA5